Fixed Patreon button margin on mobile.

--- a/static/shared.css
+++ b/static/shared.css
@@ -173,6 +173,10 @@ nav > ol > li > a:hover {
   text-align: center;
 }
 
+.patreon-widget {
+  margin-left: 1rem;
+}
+
 @media screen and (min-width: 1024px) {
   nav {
     display: block;
@@ -213,10 +217,8 @@ nav > ol > li > a:hover {
   .item {
     max-width: 400px;
   }
-}
 
-/* Patreon Button */
-
-.patreon-widget {
-  margin-left: 4rem;
+  .patreon-widget {
+    margin-left: 4rem;
+  }
 }
